--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -14,5 +14,7 @@
 <a href="{%url 'createprofile'%}">CreateProfile</a>
 <a href="{%url 'editprofile' %}"> EditProfile</a>
 <a href="{%url 'viewprofile' %}">view Myprofile</a>
+
+<a href="{%url 'createrecipe' %}">createRecipe</a>
 </body>
 </html>
