--- a/users/templates/users/viewprofile.html
+++ b/users/templates/users/viewprofile.html
@@ -15,7 +15,8 @@
     <div class="col-3">
 
                 <div class="card" style="width: 18rem;">
-          <img src="{{user.pofile_pic.url}}" class="card-img-top" alt="no image">
+          <img src="{{users.pofile_pic.url}}" class="card-img-top" alt="no image">
+                    <h1>{{users.pofile_pic.url}}</h1>
           <div class="card-body">
             <h5 class="card-title">{{user.user}}</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
